lab1/Test/L1-A-10-1.output
Error Type A at Line 7
Error Type A at Line 8
Error Type B at Line 32
