lab1/Test/L1-A-10-1.cmm
int ;
struct {
  struct R Y73s3TQEvgtWpTT4d ;
  int MdtvPOLh3 ;
  int PK_VyyR6MhP ;
  int q7JqBTa97jj8Ur0 ;
  int &u ;
  struct Zq nmexlcm3Bmwv9HTM5 = K2s || qiD && uw #
    > mVVE8kaniluepkZ7k + ty0E7OrRVdTC9ylIDK7 * - XMb6qUa 
    [ QacP0erOmUHhK = mcNYjF550DoZEG <= JTi6Edf_swRQKYXVWvEY 
    - ! ! ( eWomtdSc4dq || POVa2EulDHyWCBlmwRJF / ! V2d4hQxUG3LOd3 
    ( eltyvVUb_e0B4cfiqTu , sPwqSWiLhRlns3pTwi < UsV4 
    >= 2036417961.667920257 != eugG61xEUnd == - 1361955917 
    . Voh / d24tifYa1Rm4Oo ( ) ) ) ] , vcJBN ;
}aGAe5GEtoSJHc 
;
struct UanLl3iXVznf ;
int rcxjBIh0AhzA ( float zIO [ 1859905522 ] ) {
}
struct Uu7pQsVd2WqbdU {
};
int YQ8pmlOnYvqlVPLMrg , mEbxPxMM 

;
struct LVa2iBKDHRqh ;
int ;
int v5tk14Maxlnkfpf8AH ( ) {
  if ( PhPGnEoD5 )   cJ8Dh8VVH ;
else   if ( AliSU ) {
    rYo ;
    if ( G0 )     GJzeaGNbEjRvtD6Ups ;
else     while if ( mIUpUDQlL_A )     n5QOWRwIwsa8ezn 
      ;


    if ( KcvOXimy8nk5r )     return iXQnsbainBBTix 
      ;

  }

}
int j136ZBoRI7nxn7kQF ( ) {
}
int ZtchXvIoufA0 ( ) {
}
int ;
int rv ( int XEgjQM , int Y08BE7A5oJ_8CA ) {
}
